<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hangman</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="word">Word: </string>
    <string name="miss">Misses: </string>
    <string name="start_game">start game!</string>
    <string name="numofword">Number Of Words Left: </string>
    <string name="numberOfGuess">Num of Guess Remained: </string>
    <string name="next_word">Next Word</string>
    <string name="end_game">End Game</string>
    <string name="no_keyboard">No Keyboard</string>
    <string name="need_hint">Need Hint</string>
    <string name="hint_prefix">Why not try</string>
    <string name="no_hint">Sorry, no hint</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="my_name">By Vincent Zhou</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="instruction">
        This is a hangman game.\n
        Use start game to start a new game.\n
        Use keyboard to make a guess.\n
        Tap on \"No Keyboard\" to show the keyboard.\n
        * stands for unknown character.\n
        You can skip a word and end the game at any time.\n
        You can get hint by click \"Need hint\".\n
        Make sure you have submitted the highest score!
    </string>
    <string name="instruction_title">Instructions</string>
    <string name="skip">Skip</string>
    <string name="donotshowagain">Do not show this again</string>
</resources>
